# JR_raylib_pong

./: CMakeLists.txt  main.cpp
BaseECS/: Component.cpp  Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  Stage.cpp  Stage.h
Components/: TransformComponent.cpp  TransformComponent.h
Entities/: Arrow.cpp  Arrow.h  Ball.cpp  Ball.h  Paddle.cpp  Paddle.h
Scenes/: PlayerInput.cpp  PlayerInput.h  PongGame.cpp  PongGame.h
